@@ -1,3 +1,8 @@
+2007-02-13  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+        
+        * Added a function to dump an eaccelerator class entry in debug.c
+        * Changed include order in mm.c because of eaccelerator.h include in debug.h 
+
 2007-01-29  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Removed some obsolete code
